--- a/styles.css
+++ b/styles.css
@@ -158,10 +158,17 @@ margin-left: 50px;
     color: rgb(255, 0, 234);
 }
 
-@media (max-width: 992px) { ... }  /* tablet landscape */
-@media (max-width: 768px) { ... }  /* HP besar */
-@media (max-width: 480px) { ... }  /* HP kecil */
-
+/* Responsive untuk layar HP atau tablet */
+@media (max-width: 768px) {
+  h1 {
+    font-size: 24px;
+    text-align: center;
+  }
+  p {
+    font-size: 16px;
+    padding: 10px;
   }
 }
+
+
 
